--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "sims/external/bmv2"]
 	path = sims/external/bmv2
 	url = https://github.com/simbricks/bmv2.git
+[submodule "sims/external/reconic"]
+	path = sims/external/reconic
+	url = https://github.com/aexolate/RecoNIC
